# elnmsa-flag

./: CMakeLists.txt  OpenGL_Implementation_of_the_Austrian_Flag.pptx  glad.c  main  main.cpp  run
include/glad/: glad.h
include/glm/: glm.hpp
